--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
-<h1>Welcome to my app!</h1>
+<div class="jumbotron center">
 
-<p>Sign up <%= link_to 'here', '#' %>.</p>
+	<h1>Welcome to my app!</h1>
+
+	<%= link_to 'Log In', '#', class: 'btn btn-default btn-lg' %>
+	<%= link_to 'Sign Up', '#', class: 'btn btn-primary btn-lg' %>
+
+</div>
