--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,15 @@
 
 	<h1>Welcome to my app!</h1>
 
-	<%= link_to 'Log In', '#', class: 'btn btn-default btn-lg' %>
-	<%= link_to 'Sign Up', '#', class: 'btn btn-primary btn-lg' %>
+	<% if user_signed_in? %>
+
+		<p>You're logged in!</p>
+
+	<% else %>
+
+		<%= link_to 'Log In', new_user_session_path, class: 'btn btn-default btn-lg' %>
+		<%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
+
+	<% end %>
 
 </div>
