--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -4,8 +4,9 @@
   <thead>
     <tr>
       <th>User</th>
+      <th>Image</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -13,6 +14,7 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.user.email if pin.user %></td>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.description %></td>
         <td><%= link_to 'Show', pin %></td>
         <% if pin.user == current_user %>
