--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 	<div class="container">
 
-		<% flash.each do |msg| %>
+		<% flash.each do |name, msg| %>
 			
 			<%= content_tag(:div, msg, class: 'alert alert-info') %>
 
