--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,33 +1,26 @@
-<h1>Listing pins</h1>
+<div id="pins" class="transitions-enabled">
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Image</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @pins.each do |pin| %>
-      <tr>
-        <td><%= pin.user.email if pin.user %></td>
-        <td><%= image_tag pin.image.url(:medium) %></td>
-        <td><%= pin.description %></td>
-        <td><%= link_to 'Show', pin %></td>
-        <% if pin.user == current_user %>
-          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
+        
+        <div class="box panel panel-default">
+            
+            <%= image_tag pin.image.url(:medium) %>
+
+            <div class="panel-body">
+            
+                <%= pin.user.email if pin.user %>
+                <%= pin.description %>
+                <%= link_to 'Show', pin %>
+
+                <% if pin.user == current_user %>
+                    <%= link_to 'Edit', edit_pin_path(pin) %>
+                    <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+                <% end %>
+
+            </div>
+
+        </div>
+
     <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<% if user_signed_in? %>
-  <%= link_to 'New Pin', new_pin_path %>
-<% end %>
+</div><!-- end pins -->
