added pagination to pins index

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -34,3 +34,9 @@
     <% end %>
 
 </div><!-- end pins -->
+
+<div class="center">
+
+    <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
+
+</div>
