--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -14,7 +14,7 @@
                 
                 <p><strong><%= pin.user.name if pin.user %></strong></p>
 
-                <% if pin.user == current_user %>
+                <% if current_user && pin.user == current_user %>
 
                     <div class="actions">
                         <%= link_to edit_pin_path(pin) do %>
