--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,5 +23,15 @@
 
 	</div>
 
+	<div class="row footer">
+		
+		<div class="container">
+			
+			<p>Built by RJ McCollam | Find me online at <a href="http://www.rjmccollam.com">www.rjmccollam.com</a> &amp; on Twitter at <a href="http://twitter.com/rjmccollam">@rjmccollam</a></p>
+
+		</div>	
+
+	</div>
+
 </body>
 </html>
