--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,34 +1,59 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
+
     <div class="navbar-header">
+
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+
       <%= link_to 'Pinteresting', root_path, class: 'navbar-brand' %>
+
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'About', about_path %></li>
-        <li><%= link_to 'Contact', contact_path %></li>
+
+      <div class="navbar-right">
+
         <% if user_signed_in? %>
-          <li>
-            <%= link_to new_pin_path, class: 'btn btn-default navbar-btn' do %>
-              <span class="glyphicon glyphicon-plus"></span> New Pin
-            <% end %>
-          </li>
-          <li><%= link_to 'Account Settings', edit_user_registration_path %></li>
-          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+
+          <%= link_to new_pin_path, class: 'btn btn-primary navbar-btn' do %>
+            <span class="glyphicon glyphicon-plus"></span> New Pin
+          <% end %>
+
+          <%= link_to 'Log Out', destroy_user_session_path, class: 'btn btn-default navbar-btn', method: :delete %></li>
+
         <% else %>
-          <li><%= link_to 'Log In', new_user_session_path %></li>
+
+          <%= link_to new_user_session_path, class: 'btn btn-default navbar-btn' do %>
+            <span class="glyphicon glyphicon-lock"></span> Log In
+          <% end %>
+
         <% end %>
+
+      </div>
+
+      <ul class="nav navbar-nav navbar-right">
+
+        <% if user_signed_in? %>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account Settings <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Edit', edit_user_registration_path %></li>
+            </ul>
+          </li>
+
+        <% end %>
+
       </ul>
+
     </div><!-- /.navbar-collapse -->
+
   </div><!-- /.container -->
+
 </nav>
