--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,5 +1,21 @@
-<h1>New pin</h1>
+<div class="panel panel-default">
 
-<%= render 'form' %>
+	<div class="panel-heading">
 
-<%= link_to 'Back', pins_path %>
+		<h1>New Pin</h1>
+
+	</div>
+
+	<div class="panel-body">
+
+		<%= render 'form' %>
+
+	</div>
+
+	<div class="panel-footer">
+
+		<%= link_to 'Back', pins_path %>
+
+	</div>
+
+</div>
