--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,5 +1,3 @@
-<%= link_to 'Back', pins_path %>
-
 <div class="row"></div>
 
 	<div class="col-md-offset-2 col-md-8">
@@ -23,6 +21,12 @@
                         <span class="glyphicon glyphicon-pencil"></span> Edit
                     <% end %>
 				<% end %>
+
+			</div>
+
+			<div class="panel-footer">
+
+				<%= link_to 'Back', pins_path %>
 
 			</div>
 
