updated footer styles

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -17,8 +17,4 @@ body {padding-top: 70px;}
 
 .navbar-brand {font-weight: bold;}
 
-.footer {background: #333; color: #fff; margin: 30px 0 0; padding: 15px 0 5px;
-	a {color: #fff; text-decoration: underline;
-		&:hover {text-decoration: none;}
-	}
-}
+.footer {margin: 30px 0 0; padding: 15px 0 5px;}
